--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="lib/sylvester.js"></script>
 <script src='lib/jquery.js'></script>
 <script src="src/Keycode.js"></script>
+<script src="src/LEVELS.js"></script>
 <script src="src/LevelDriver.js"></script>
 <script src="src/GameLevel.js"></script>
 <script src="src/game.js"></script>
