--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 <script src="src/Keycode.js"></script>
 <script src="src/LEVELS.js"></script>
 <script src="src/LevelDriver.js"></script>
+<script src="src/StartMenu.js"></script>
 <script src="src/GameLevel.js"></script>
 <script src="src/game.js"></script>
 <body onload="init();">
 	<div class="canvasContainer">
-		<canvas id="gameCanvas" width="1000" height="600"></canvas>
+		<canvas id="gameCanvas" width="960" height="640"></canvas>
 	</div>
 </body>
 </html>
