--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script src="src/StartMenu.js"></script>
 <script src="src/GameLevel.js"></script>
 <script src="src/game.js"></script>
-<body onload="init();">
+<body onload="moosetrack.init();">
 	<div class="canvasContainer">
 		<canvas id="gameCanvas" width="960" height="640"></canvas>
 	</div>
