trying to save scores

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="lib/easel.js"></script>
 <script src="lib/sylvester.js"></script>
 <script src='lib/jquery.js'></script>
+<script src='lib/jquery.cookie.js'></script>
 <script src="src/Keycode.js"></script>
 <script src="src/LevelDriver.js"></script>
 <script src="src/StartMenu.js"></script>
