--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <script src="lib/easel.js"></script>
+<script src="lib/sound.js"></script>
+<script src="lib/preload.js"></script>
 <script src="lib/sylvester.js"></script>
 <script src='lib/jquery.js'></script>
 <script src='lib/jquery.cookie.js'></script>
@@ -14,6 +16,20 @@
 <script src="src/GameLevel.js"></script>
 <script src="src/game.js"></script>
 <script src="src/LEVELS.js"></script>
+<script type="text/javascript">
+var Clay = Clay || {};
+Clay.gameKey = "trace";
+Clay.readyFunctions = [];
+Clay.options = { debug: true };
+Clay.ready = function( fn ) {
+    Clay.readyFunctions.push( fn );
+};
+( function() {
+    var clay = document.createElement("script"); clay.async = true;
+    clay.src = ( "https:" == document.location.protocol ? "https://" : "http://" ) + "clay.io/api/api.js"; 
+    var tag = document.getElementsByTagName("script")[0]; tag.parentNode.insertBefore(clay, tag);
+} )();
+</script>
 <body onload="moosetrack.init();">
 	<div class="canvasContainer">
 		<canvas id="gameCanvas" width="960" height="640"></canvas>
