made rest of levels

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<style>
 	@font-face { font-family: 'Delicious'; src: url('assets/silom.ttf'); } 
+	@font-face { font-family: 'myriad-pro'; src: url('asset/MYRIADPRO-REGULAR.OTF'); } 
 	</style>
 </head>
 <script src="lib/easel.js"></script>
