--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ Clay.ready = function( fn ) {
     var tag = document.getElementsByTagName("script")[0]; tag.parentNode.insertBefore(clay, tag);
 } )();
 </script>
-<body onload="moosetrack.init();">
-	<div class="canvasContainer">
-		<canvas style="cursor: pointer; border-style: dashed;" id="gameCanvas" width="960" height="640"></canvas>
+<body style="background-color: #FAFAFA" onload="moosetrack.init();">
+	<a href="https://github.com/ymmn/trace"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+	<div style="margin: auto; width: 960px; background-color: #fff;" class="canvasContainer">
+		<canvas style="cursor: pointer;" id="gameCanvas" width="960" height="640"></canvas>
 	</div>
 </body>
 </html>
