--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <head>
 	<title></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<style>
-	@font-face { font-family: 'Delicious'; src: url('assets/silom.ttf'); } 
-	@font-face { font-family: 'myriad-pro'; src: url('asset/MYRIADPRO-REGULAR.OTF'); } 
-	</style>
 </head>
 <script src="lib/easel.js"></script>
 <script src="lib/sound.js"></script>
@@ -37,6 +33,10 @@ Clay.ready = function( fn ) {
 <body style="background-color: #FAFAFA" onload="moosetrack.init();">
 	<a href="https://github.com/ymmn/trace"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 	<div style="margin: auto; width: 960px; background-color: #fff;" class="canvasContainer">
+		<!--<div id="credits">
+			Abdelrahman Nimeri and Lisa Huang
+			<button id="close-credits"></button>
+		</div>-->
 		<canvas style="cursor: pointer;" id="gameCanvas" width="960" height="640"></canvas>
 	</div>
 </body>
