--- a/index.html
+++ b/index.html
@@ -16,20 +16,7 @@
 <script src="src/GameLevel.js"></script>
 <script src="src/game.js"></script>
 <script src="src/LEVELS.js"></script>
-<script type="text/javascript">
-var Clay = Clay || {};
-Clay.gameKey = "trace";
-Clay.readyFunctions = [];
-Clay.options = { debug: true };
-Clay.ready = function( fn ) {
-    Clay.readyFunctions.push( fn );
-};
-( function() {
-    var clay = document.createElement("script"); clay.async = true;
-    clay.src = ( "https:" == document.location.protocol ? "https://" : "http://" ) + "clay.io/api/api.js"; 
-    var tag = document.getElementsByTagName("script")[0]; tag.parentNode.insertBefore(clay, tag);
-} )();
-</script>
+
 <body style="background-color: #FAFAFA" onload="moosetrack.init();">
 	<a href="https://github.com/ymmn/trace"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 	<div style="margin: auto; width: 960px; background-color: #fff;" class="canvasContainer">
@@ -39,5 +26,30 @@ Clay.ready = function( fn ) {
 		</div>-->
 		<canvas style="cursor: pointer;" id="gameCanvas" width="960" height="640"></canvas>
 	</div>
+	<script type="text/javascript">
+	var Clay = Clay || {};
+	Clay.gameKey = "trace";
+	Clay.readyFunctions = [];
+	Clay.options = { debug: false };
+	var barOptions = {
+	    position: { // object containing position-related properties
+	        width: '120px', // specify a percentage or px width for the bar
+	        height: '600px', // specify a percentage or px height for the bar
+	        top: 10
+	    }
+	};
+	Clay.ready = function( fn ) {
+	    Clay.readyFunctions.push( fn );
+	};
+	function addBar(){
+		if(Clay.Bar) {
+			new Clay.Bar( barOptions );
+		} else {
+			window.setTimeout(addBar, 500);
+		}
+	}
+	addBar();
+	</script>
+	<script src="//clay.io/api/api.js"></script>
 </body>
 </html>
